--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/images/class-icon-1.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <title>RAM FITNESS</title>
+    <title>RAM FITNESS CLUB</title>
 </head>
 
 <body>
